# RSEConUK2019CppWorkshop

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  plot_timings.py  take_timings.sh
checkpoint_0/: main.cpp  main_chrono.cpp  main_timings.cpp
checkpoint_1/: main.cpp
checkpoint_2/: main.cpp
checkpoint_3/: main.cpp
checkpoint_4/: main.cpp
checkpoint_5/: main.cpp
checkpoint_6/: main.cpp
checkpoint_7/: main.cpp  main_chrono.cpp  main_timings.cpp
checkpoint_99/: main.cpp  main_timings.cpp
slides/: RSEConUK2019CppWorkshop.md  test_slides.py
